# xconq

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  MODERNIZATION-PLAN.md  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.in  xconq.desktop
bitmaps/: addunits.b  ants.b  attackcurs.b  attackmask.b  bomb1.b  bomb2.b  bomb3.b  bomb4.b  bord32-1.b  bordcurs.b  buildcurs.b  buildmask.b  check.b  closer.b  conncurs.b  cursbord.b  cursbordm.b  curscell.b  curscellm.b  cursclouds.b  curscloudsm.b  curscoat.b  curscoatm.b  cursconn.b  cursconnm.b  curselev.b  curselevm.b  cursfeat.b  cursfeatm.b  cursmaterial.b  cursmaterialm.b  curspeop.b  curspeopm.b  curstemp.b  curstempm.b  cursunit.b  cursunitm.b  cursview.b  cursviewm.b  curswinds.b  (+75 more)
changelogs/: ChangeLog-1995  ChangeLog-1996  ChangeLog-1997  ChangeLog-1998  ChangeLog-1999  ChangeLog-2000  ChangeLog-2001  ChangeLog-2002  ChangeLog-2003  ChangeLog-2004  ChangeLog-EMCDONALD_AI  ChangeLog-MSKALA_SUPPLY
curses/: .cvsignore  CMakeLists.txt  Makefile.in  Xconq.RC  ccmd.c  ccmd.cc  cconq.6in  cconq.c  cconq.cc  cconq.h  cdraw.c  cdraw.cc
cvs_hist/: MAPPINGS
doc/: .cvsignore  CMakeLists.txt  INSTALL  INSTALL-win.txt  Makefile.in  PROJECTS  README-win.txt  README.supply  TODO  colors.txt  commands.texi  conq.dox.in  design.texi  gdlref.texi  getsyms.sh  glossary.texi  gpl.texi  hacking.texi  kwic.c  net-security-review.md  playref.texi  refman.texi  syntax.texi  texi2html  xcdesign.texi  xconq.texi
images/: Makefile.in
kernel/: .cvsignore  CMakeLists.txt  Makefile.in  acdefs.h.in  action.def  actions.c  actions.cc  ai.c  ai.cc  ai.h  aioprt.cc  aioprt.h  aiscore.cc  aiscore.h  aitact.cc  aitact.h  aiunit.cc  aiunit.h  aiunit2.cc  aiunit2.h  aiutil.cc  aiutil.h  atype.def  autotest.c  autotest.cc  autotest.h  cmd.c  cmd.cc  cmd.def  cmdline.6in  cmdline.c  cmdline.cc  cmdline.h  combat.c  combat.cc  config.h  conq.h  copying.awk  copying.c  dir.h  (+113 more)
lib/: .cvsignore  1756.g  1757.g  3rd-age.g  ChangeLog-awls  ChangeLog-opal  Makefile.in  README  advances.g  advterr.g  aircraft.imf  anc-near-east.g  ancient-days.g  ancient.imf  angband.imf  animals.imf  antar-map-50km.g  antar-stdgame.g  arena.g  arms.imf  awls-rules.g  battles.g  (+200 more)
sdl/: .cvsignore  .sdlscreen.c.swp  CMakeLists.txt  Makefile.in  sdlcltbl.cc  sdlcmd.cc  sdlconq.h  sdlimf.cc  sdlinit.cc  sdlmac.cc  sdlmain.cc  sdlmap.cc  sdlpreconq.h  sdlscreen.cc  sdluact.cc  sdlunix.cc  sdlwin32.cc
src/gdl/: Makefile.am  Makefile.in  desc.cc  dice.cc  dir.cc  gvars.cc  history.cc  lisp.cc  module.cc  namer.cc  pact.cc  player.cc  score.cc  tables.cc  types.cc  world.cc
src/gdl/gamearea/: .cvsignore  Makefile.am  Makefile.in  area.cc  feature.cc  layers.cc
src/gdl/media/: Makefile.am  Makefile.in  imf.cc  img.cc
src/gdl/side/: Makefile.am  Makefile.in  cellview.cc  doctrine.cc  side.cc  sidemask.cc  sorder.cc  unitview.cc
src/gdl/unit/: .cvsignore  Makefile.am  Makefile.in  action.cc  goal.cc  pastunit.cc  plan.cc  task.cc  unit.cc  unitview.cc
src/include/gdl/: Makefile.am  Makefile.in  base.h  desc.h  dice.h  dir.h  gvar.def  gvars.h  history.def  history.h  kernel.h  lisp.h  module.h  namer.h  pact.h  player.h  score.h  table.def  tables.h  types.h  ui.h  utype.def  world.h
src/include/gdl/gamearea/: Makefile.am  Makefile.in  area.h  feature.h  layers.h
src/include/gdl/media/: Makefile.am  Makefile.in  imf.h  img.h
src/include/gdl/side/: Makefile.am  Makefile.in  cellview.h  doctrine.h  side.h  side_FWD.h  sidemask.h  sorder.h  unitview.h
src/include/gdl/unit/: Makefile.am  Makefile.in  action.h  goal.def  goal.h  pastunit.h  plan.h  task.def  task.h  unit.h  unit_FWD.h  unitview.h
src/include/util/: Makefile.am  Makefile.in  base.h  constants.h  debug.h  fs.h  kernel.h  log.h  math.h  memory.h  parambox.h  pbooltbl.h  prng.h  signal.h  socket.h  string.h  time.h  ui.h  util.h
src/util/: Makefile.am  Makefile.in  debug.cc  fs.cc  log.cc  math.cc  memory.cc  pbooltbl.cc  prng.cc  socket.cc  string.cc  time.cc  ui.cc
src/util/unix/: Makefile.am  Makefile.in  fs.cc  signal.cc  time.cc
src/util/win32/: time.cc  time.h
tcltk/: .cvsignore  CMakeLists.txt  Imfapp.RC  Makefile.in  iappmac.c  iappunix.c  iappwin32.c  imfapp.tcl  tkcmd.c  tkconq.h  tkconq.tcl  tkiapp.c  tkimf.c  tkimf.h  tkinit.c  tkisamp.c  tkmac.c  tkmain.c  tkmap.c  tkunix.c  tkwin32.c  tkxmac.c  xcutil.h  xlibstuff.c  xlibstuff.h
tcltk/BWidget/: Makefile.in  bitmap.tcl  combobox.tcl  dialog.tcl  dragsite.tcl  dropsite.tcl  dynhelp.tcl  entry.tcl  label.tcl  labelentry.tcl  labelframe.tcl  listbox.tcl  mainframe.tcl  notebook.tcl  pagesmgr.tcl  passwddlg.tcl  scrollframe.tcl  scrollview.tcl  scrollw.tcl  spinbox.tcl  tree.tcl  utils.tcl  widget.tcl  xpm2image.tcl
test/: .cvsignore  CMakeLists.txt  Makefile.in  README  actstest.inp  aitest.inp  all-land.g  all.g  around.g  auto.g  big-land.g  buildtransp.g  cmd-diff.sh  common.sh  cond.g  error-traversal.g  error1.g  error2.g  error3.g  error4.g  error5.g  error6.g  error7.g  error8.g  error9.g  extreme1.g  extreme2.g  extreme3.g  game-diff.sh  game-uses.sh  imf-diff.sh  imf-uses.sh  lib-uses.sh  libtest.inp  longtest.inp  loop.g  nonrand.g  obstacle.g  perftest.inp  print.g  (+25 more)
test/fuzz/: CMakeLists.txt  README.md  fuzz_gdl.cc  fuzz_stubs.cc  gdl.dict  gen_dict.sh
test/fuzz/corpus/: regress_decimal_mul_overflow  regress_dice_size_one  regress_num_intermediate_overflow  regress_octal_escape_overflow  regress_unclosed_list_symbol  seed_antar-stdterr_g  seed_mixed_tokens  seed_nested_comment
test/manual/: change-type-acp-test.g
test/unit/: CMakeLists.txt  unittests.cc
x11/: .cvsignore  CMakeLists.txt  Makefile.in  XShowimf-co.ad  XShowimf.ad  Xtconq-co.ad  Xtconq.ad  closeup.notes  imf2x.c  x2imf.c  xcloseup.c  xcmd.c  xconq.6in  xcutil.c  xdesign.c  xdraw.c  xhelp.c  ximf.c  ximf.h  xinit.c  xmap.c  xprint.c  xshowimf.1  xshowimf.c  xtconq.6in  xtconq.c  xtconq.h  xtconqad.h  xtmain.c
x11/Ad2c/: Makefile  README  ad2c.man
x11/SelFile/: Dir.c  Draw.c  Makefile.in  SelFile.c
(+69 files in other folders)
